--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:44</td>   <td>2599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:44</td>   <td>2729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>2870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>2994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>3137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>3265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>3401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>3546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:45</td>   <td>3672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:46</td>   <td>3814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:46</td>   <td>3952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>18/09/13 03:37:46</td>   <td>4077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@d2cc05a]">login</td> 
-  <td>main@1675886984</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>1665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>1801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>1940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>2058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>2186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>2303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:20</td>   <td>2427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:21</td>   <td>2566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:21</td>   <td>2703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:21</td>   <td>2820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:21</td>   <td>2938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
+<tr bgcolor="6e8eef">  <td>18/09/13 12:50:21</td>   <td>3075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.login(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:workM.workTest.day1@51efea79]">login</td> 
+  <td>main@1165836116</td>   <td></td> </tr>
 </table>
